--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.19",
